
Changes with ngx_http_redis 0.3.2                               17 Aug 2010

    *) Bugfix: ngx_http_redis_module might issue the error message 
       "redis sent invalid trailer".  For more information see:
       $ diff -ruN \
             nginx-0.8.34/src/http/modules/ngx_http_memcached_module.c \
             nginx-0.8.35/src/http/modules/ngx_http_memcached_module.c

    *) Change: now the $redis_db set is not obligatory; default
       value is "0".


Changes with ngx_http_redis 0.3.1                               26 Dec 2009

    *) Change: return 502 instead of 404 for error.

    *) Change: better error messages diagnostics.

    *) Bugfix: improve interoperability with redis; the bug had
       appeared in 0.3.0.


Changes with ngx_http_redis 0.3.0                               23 Dec 2009

    *) Compatibility with latest stable (0.7.64) and
       development 0.8.31 releases.

    *) Bugfix: multiple commands issue with interoperability with
       redis; the bug had appeared in 0.2.0.

    *) Feature: redis_bind directive merge from original
       memcached module (for 0.8.22 and later).


Changes with ngx_http_redis 0.2.0                               19 Sep 2009

    *) Feature: the $redis_db variable: now the ngx_http_redis
       module uses the $redis_db variable value as the parameter
       for SELECT command.

    *) Cleanup: style/spaces fixes.


Changes with ngx_http_redis 0.1.2                               14 Sep 2009

    *) Change: backport to 0.7.61.


Changes with ngx_http_redis 0.1.1                               31 Aug 2009

    *) Change: compatibility with nginx 0.8.11.

    *) Cleanup: mlcf -> rlcf, i.e.
       (memcached location configuration) -> redis...
