@@ -1,3 +1,8 @@
+Changes with ngx_http_redis 0.3.3                               07 Jun 2011
+
+    *) Bugfix: fix interaction with redis if redis_db was used.
+       Also, compile with -Werror now is possible.
+
 
 Changes with ngx_http_redis 0.3.2                               17 Aug 2010
 
